--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/style.css">
     <title>New Year New Me</title>
 </head>
 <body>
-    
+    <header>
+        <!-- thinks section -->
+        <section class="thinks-section">
+            <div class="thinks-title">
+                <h5>All Thinks Are<br>
+                Possible If You<br>
+                believe</h5>
+            </div>
+            <div class="thinks-description">
+                <p>There are many variations of passages of Lorem Ipsum<br>
+                available, but the majority have suffered alteration in some<br>
+                form, by injected humour, or randomised words</p>
+            </div>
+            <div  class="thinks-btn">
+                <button class="thinks-btn-main">Contact Us</button>
+            </div>
+        </section>
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
