My failures of previous year section push

--- a/index.html
+++ b/index.html
@@ -1,33 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/b662e3a97a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style/style.css">
     <title>New Year New Me</title>
 </head>
+
 <body>
     <header>
         <!-- thinks section -->
         <section class="thinks-section">
             <div class="thinks-title">
                 <h5>All Thinks Are<br>
-                Possible If You<br>
-                believe</h5>
+                    Possible If You<br>
+                    believe</h5>
             </div>
             <div class="thinks-description">
                 <p>There are many variations of passages of Lorem Ipsum<br>
-                available, but the majority have suffered alteration in some<br>
-                form, by injected humour, or randomised words</p>
+                    available, but the majority have suffered alteration in some<br>
+                    form, by injected humour, or randomised words</p>
             </div>
-            <div  class="thinks-btn">
+            <div class="thinks-btn">
                 <button class="thinks-btn-main">Contact Us</button>
             </div>
         </section>
     </header>
-    <main></main>
+    <main>
+        <!-- My failures of previous year section -->
+        <section class="my-failures-section">
+            <div class="failures-img">
+                <img src="images/person.png" alt="">
+            </div>
+            <div class="failures-blog">
+                <div class="">
+                    <h5 class="failures-title">My failures of <br>
+                        previous year</h5>
+                    <p class="failure-description">Contrary to popular belief, Lorem Ipsum is not <br>
+                        simply random text. It has roots in a piece of <br>
+                        classical Latin literature from 45 BC, making it over <br>
+                        2000 years old. Richard McClintock.</p>
+                    <div class="failures-list">
+                        <p><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</p>
+                        <p><i class="fa-solid fa-check"></i> Contrary to popular belief.</p>
+                        <p><i class="fa-solid fa-check"></i> Contrary to popular , is not simply.</p>
+                        <p><i class="fa-solid fa-check"></i> Contrary to popular belief, is not simply.</p>
+                        <p><i class="fa-solid fa-check"></i> Contrary to popular simply.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
     <footer></footer>
 </body>
+
 </html>
