--- a/index.html
+++ b/index.html
@@ -54,8 +54,69 @@
                 </div>
             </div>
         </section>
+        <!-- My Plans section -->
+        <section class="my-plans-section">
+            <div class="my-plans">
+                <h5 class="my-plans-title">My Plans</h5>
+            </div>
+            <div class="my-plans-blog">
+                <div class="plans-blog-1">
+                    <img class="img" src="images/icons/web.png" alt="web develop">
+                    <h5 class="title">Web Development</h5>
+                    <p class="description">I want to start</p>
+                </div>
+                <div class="plans-blog-2">
+                    <img class="img" src="images/icons/js.png" alt="Javascript">
+                    <h5 class="title">Javascript</h5>
+                    <p class="description">I want to learn</p>
+                </div>
+                <div class="plans-blog-3">
+                    <img class="img" src="images/icons/smoke.png" alt="Smoking Habit">
+                    <h5 class="title">Smoking Habit</h5>
+                    <p class="description">I want to end</p>
+                </div>
+                <div class="plans-blog-4">
+                    <img class="img" src="images/icons/ecom.png" alt="ecommerce">
+                    <h5 class="title">ecommerce</h5>
+                    <p class="description">I want to develop</p>
+                </div>
+            </div>
+        </section>
+        <!-- Awlays keep a positive mindset section -->
+        <section class="awlays-section">
+            <div class="awlays-bg">
+                <h5 class="awlays-title">Awlays keep a positive mindset</h5>
+                <button class="awlays-btn">Call Now</button>
+            </div>
+        </section>
+        <!-- extra section  -->
+
     </main>
-    <footer></footer>
+    <footer>
+        <!-- Future section -->
+        <section class="future-section">
+            <div class="futere-blog">
+                <h5 class="future-title">Future</h5>
+                <div class="future-description">
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words</p>
+                    <p>Email : alif@gmail.com</p>
+                    <p>Phone : 01518 95 71 21</p>
+                </div>
+                <div class="future-icon">
+                    <img src="images/icons/fb.png" alt="facebook"><img src="images/icons/twitter.png" alt="twitter"><img
+                    src="images/icons/youtube.png" alt="youtube">
+                </div>
+            </div>
+            <div class="subsribe">
+                <h5 class="subscribe-title">Subscribe</h5>
+                <input type="email" name="" id="email" placeholder="Enter your email">
+                <div>
+                    <button class="subsribe-btn">Subscribe</button>
+                </div>
+            </div>
+        </section>
+    </footer>
 </body>
 
 </html>
