last commit favicon add

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/b662e3a97a.js" crossorigin="anonymous"></script>
+    <link rel="shortcut icon" href="images/icons/goal.png" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
     <title>New Year New Me</title>
 </head>
@@ -89,7 +90,7 @@
                 <button class="awlays-btn">Call Now</button>
             </div>
         </section>
-        <!-- extra section  -->
+
 
     </main>
     <footer>
