--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="thinks-description">
                 <p>There are many variations of passages of Lorem Ipsum<br>
                     available, but the majority have suffered alteration in some<br>
-                    form, by injected humour, or randomised words</p>
+                    form, by injected humour, or randomized words</p>
             </div>
             <div class="thinks-btn">
                 <button class="thinks-btn-main">Contact Us</button>
@@ -83,11 +83,11 @@
                 </div>
             </div>
         </section>
-        <!-- Awlays keep a positive mindset section -->
-        <section class="awlays-section">
-            <div class="awlays-bg">
-                <h5 class="awlays-title">Awlays keep a positive mindset</h5>
-                <button class="awlays-btn">Call Now</button>
+        <!-- always keep a positive mindset section -->
+        <section class="always-section">
+            <div class="always-bg">
+                <h5 class="always-title">Always keep a positive mindset</h5>
+                <button class="always-btn">Call Now</button>
             </div>
         </section>
 
@@ -96,11 +96,11 @@
     <footer>
         <!-- Future section -->
         <section class="future-section">
-            <div class="futere-blog">
+            <div class="future-blog">
                 <h5 class="future-title">Future</h5>
                 <div class="future-description">
                     <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                        alteration in some form, by injected humour, or randomised words</p>
+                        alteration in some form, by injected humour, or randomized words</p>
                     <p>Email : alif@gmail.com</p>
                     <p>Phone : 01518 95 71 21</p>
                 </div>
@@ -109,11 +109,11 @@
                     src="images/icons/youtube.png" alt="youtube">
                 </div>
             </div>
-            <div class="subsribe">
+            <div class="subscribe">
                 <h5 class="subscribe-title">Subscribe</h5>
                 <input type="email" name="" id="email" placeholder="Enter your email">
                 <div>
-                    <button class="subsribe-btn">Subscribe</button>
+                    <button class="subscribe-btn">Subscribe</button>
                 </div>
             </div>
         </section>
